# OpenBox

./: .gitignore  NOTICE  README.md  ROADMAP.md  THIRD_PARTY_LICENSES.md
.claude/commands/: caveman-commit.md  caveman-review.md  caveman.md
.claude/hooks/: session-start.sh
.github/workflows/: pr.yml
.omc/plans/: ralplan-implement-opensandbox-in-azure.md
.omc/specs/: deep-dive-implement-opensandbox-in-azure.md  deep-dive-trace-implement-opensandbox-in-azure.md
apps/kata-webhook/: Dockerfile  README.md  pyproject.toml
apps/kata-webhook/app/: main.py
apps/portal-api/: README.md  pyproject.toml
apps/portal-api/app/: clients.py  cluster_history.py  config.py  events.py  history.py  identity.py  main.py
apps/portal-frontend/: README.md
docs/: ARCHITECTURE.md  DEMO-HYPOTHESIS-SWARM.md  DEMO-TOMORROW.md  DEVELOPER-EXPERIENCE.md  DOC-REFRESH-LOG.md  OPERATIONS.md  PORTAL-AUTH.md  acceptance-checklist.md  index.md  mission-and-architecture.md
evidence/: qa-report.md
evidence/runs/finish/: AC-CHECKLIST.md  (+24 more)
evidence/screenshots/: SHOTS.md  _render.py
examples/: hypothesis_swarm.py  kimi_via_osb.py  run_in_sandbox.py  sdk_e2e.py  vscode_sandbox.py
examples/kimi-agent-demo/: aci_sandbox.py
examples/swarm_target/: cart.py  test_cart.py
infra/: kata-pool.yaml
infra/bicep/: main.bicep
infra/helm/: opensandbox-azure-values.yaml
infra/kata-webhook/: generate-certs.sh  manifest.yaml
runbooks/: cve-response.md  dr-drill.md  incident-response.md  onboarding.md
scripts/phase4/: install-helm.sh  run-kimi-e2e.sh
tests/webbridge/: test_portal_ux.py
(+30 files in other folders)
