[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kata-webhook"
version = "0.1.0"
description = "MutatingAdmissionWebhook — forces sandbox Pods onto kata-vm-isolation runtime"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "cryptography>=43",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
