[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opensandbox-portal-api"
version = "0.1.0"
description = "DarkForge Command Center — FastAPI portal API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "kubernetes_asyncio>=31",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
